# RelayGate

./: .gitignore  Cargo.toml  LICENSE  build.rs  relaygate.example.yaml
.github/: README.md
assets/lang/: en-US.lang
assets/web/: index.html  relaygate-actions.js
assets/web/panels/: adblock.html  patch.html  render.html  settings.html  status.html  traffic.html
assets/web/partials/: ca_card.html  select_option.html  select_setting_row.html  text_setting_row.html
data/patch/: youtube.yaml
docs/: README.md  build.md  configuration.md  usage.md
languages/: zh-TW.lang
src/: adblock.rs  app.rs  bootstrap.rs  config.rs  diagnostics.rs  lang.rs  lib.rs  main.rs  path_mode.rs  runtime.rs  traffic.rs  tray.rs
src/gateway/: fetch.rs  mod.rs  rewrite.rs
src/proxy/: mitm.rs  mod.rs  rules.rs  server.rs  upstream.rs
src/rewrite/: mod.rs
src/web/: mod.rs  routes.rs  server.rs  view.rs
